--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     width: 1050px;
     height: 447px;
     background-color: hsl(244, 38%, 16%);
-    margin: 100px 150px 50px;
+    margin: 19vh auto 50px;
     border-radius: 20px;
 }
 
